--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -103,6 +103,7 @@
  .elements-navbar {
   padding-left: 10px;
   color: $light-grey;
+  margin-top: 3px;
  }
 
  .btn-search {
