--- a/app/assets/stylesheets/components/_search_bar.scss
+++ b/app/assets/stylesheets/components/_search_bar.scss
@@ -19,7 +19,7 @@
   margin-top: -30px;
   border-radius:6px;
   box-shadow: rgba(0, 0, 0, 0.07) -4px 9px 25px -6px;
-  align-items: center;
+  align-items: flex-start;
   font-size: 14px;
   color: $grey-lavender;
   z-index:1;
